todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: PROJECT/IMAGE
          volumeMounts:
            - mountPath: /app/cache
              name: img-vol
      volumes:
        - name: img-vol
          emptyDir: {}
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: BE_PROJECT/IMAGE
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-stset
spec:
  serviceName: pg-svc
  replicas: 1
  selector:
    matchLabels:
      app: pg-app
  template:
    metadata:
      labels:
        app: pg-app
    spec:
      containers:
        - name: pg
          image: postgres:alpine
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
